fix: phones: card style: left edge of some cards are not rendered on iOS

--- a/src/Styles/callout.css
+++ b/src/Styles/callout.css
@@ -352,7 +352,6 @@
             gap: 16px;
             overflow-x: auto;
             overscroll-behavior-x: none;
-            padding: var(--border-width);
             padding-bottom: 4px;
             position: relative;
             scroll-behavior: smooth;
@@ -373,7 +372,7 @@
                 min-width: var(--ntb-callout-card-width);
                 width: auto;
                 .is-mobile & {
-                    outline: var(--border-width) solid var(--background-modifier-border);
+                    box-shadow: inset 0 0 0 var(--border-width) var(--background-modifier-border);
                     flex: var(--ntb-callout-card-flex-mobile);
                     min-width: var(--ntb-callout-card-width-mobile);
                 }
